--- a/app/src/main/res/layout/activity_diet_plan.xml
+++ b/app/src/main/res/layout/activity_diet_plan.xml
@@ -62,7 +62,7 @@
             android:layout_weight="0.18"
             android:gravity="center"
             android:tag="placeholder"
-            android:text="@string/num_servings"
+            android:text="@string/add_meal_serving_size_label"
             android:textColor="@android:color/primary_text_dark" />
 
         <TextView
