--- a/app/src/main/res/layout/activity_consultant_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_consultant_user_dashboard.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConsultantUserDashboard">
+    tools:context=".consultant.ConsultantUserDashboard">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
