--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -91,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:labelFor="@id/enter_age"
                 android:text="@string/age_label"
                 android:textSize="18sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/enter_age"
@@ -101,6 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:labelFor="@id/enter_weight"
                 android:text="@string/weight_label"
                 android:textSize="18sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/enter_weight"
@@ -110,6 +112,7 @@
                 android:id="@+id/height_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:labelFor="@id/enter_height"
                 android:text="@string/height_label"
                 android:textSize="18sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/enter_height"
@@ -123,12 +126,12 @@
                 android:layout_marginTop="24dp"
                 android:width="100dp"
                 android:ems="10"
-                android:hint="@string/age_message"
                 android:inputType="number"
                 android:maxLength="3"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/age_label"
-                app:layout_constraintTop_toBottomOf="@+id/user_dashboard_subgreeting" />
+                app:layout_constraintTop_toBottomOf="@+id/user_dashboard_subgreeting"
+                android:importantForAutofill="no" />
 
             <EditText
                 android:id="@+id/enter_weight"
@@ -137,12 +140,12 @@
                 android:layout_marginStart="8dp"
                 android:width="100dp"
                 android:ems="10"
-                android:hint="@string/weight_message"
                 android:inputType="number"
                 android:maxLength="3"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/weight_label"
-                app:layout_constraintTop_toBottomOf="@+id/enter_age" />
+                app:layout_constraintTop_toBottomOf="@+id/enter_age"
+                android:importantForAutofill="no" />
 
             <EditText
                 android:id="@+id/enter_height"
@@ -151,12 +154,12 @@
                 android:layout_marginStart="8dp"
                 android:width="100dp"
                 android:ems="10"
-                android:hint="@string/height_message"
                 android:inputType="number"
                 android:maxLength="3"
                 android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/height_label"
-                app:layout_constraintTop_toBottomOf="@+id/enter_weight" />
+                app:layout_constraintTop_toBottomOf="@+id/enter_weight"
+                android:importantForAutofill="no" />
 
             <Button
                 android:id="@+id/update_button"
