--- a/app/src/main/res/layout/create_user_consultant.xml
+++ b/app/src/main/res/layout/create_user_consultant.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".ui.login.CreateUserConsultant">
+    tools:context=".ui.login.CreateNewConsultant">
 
     <EditText
         android:id="@+id/personName"
