--- a/app/src/main/res/layout/fragment_consultant_user_dashboard.xml
+++ b/app/src/main/res/layout/fragment_consultant_user_dashboard.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConsultantUserList">
+    tools:context=".consultant.ConsultantUserList">
 
     <!-- TODO: Update blank fragment layout -->
     <TableRow
