--- a/app/src/main/res/layout/fragment_consultant_user_division.xml
+++ b/app/src/main/res/layout/fragment_consultant_user_division.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ConsultantUserDivision">
+    tools:context=".consultant.ConsultantUserDivision">
 
     <TableRow
         android:id="@+id/user_log_headers_row"
