--- a/app/src/main/res/layout/fragment_sleep_weekly.xml
+++ b/app/src/main/res/layout/fragment_sleep_weekly.xml
@@ -12,10 +12,12 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/weekly_bar_chart"
         android:layout_width="0dp"
-        android:layout_height="350dp"
+        android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
