Plans now default sort ascending by plan id

--- a/app/src/main/res/layout/fragment_exercise_workout_plans.xml
+++ b/app/src/main/res/layout/fragment_exercise_workout_plans.xml
@@ -36,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.28"
-            android:drawableLeft="@android:drawable/arrow_down_float"
+            android:drawableLeft="@android:drawable/arrow_up_float"
             android:gravity="center"
             android:tag="desc"
             android:text="temp"
