--- a/app/src/main/res/layout/activity_consultant_dashboard.xml
+++ b/app/src/main/res/layout/activity_consultant_dashboard.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableTop="@android:drawable/btn_star_big_on"
+            android:drawableTop="@drawable/minicontact"
             android:onClick="navigate"
             android:text="@string/clients"
             android:textColor="@android:color/primary_text_dark" />
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableTop="@android:drawable/btn_star_big_on"
+            android:drawableTop="@drawable/miniline"
             android:onClick="navigate"
             android:text="@string/my_plans"
             android:textColor="@android:color/primary_text_dark" />
