--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableTop="@android:drawable/btn_star_big_on"
+            android:drawableTop="@drawable/minicookie"
             android:onClick="navigation"
             android:text="@string/dashboard_nav_button_food"
             android:textColor="@android:color/primary_text_dark" />
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableTop="@android:drawable/btn_star_big_on"
+            android:drawableTop="@drawable/miniboard"
             android:onClick="navigation"
             android:text="@string/dashboard_nav_button_workouts"
             android:textColor="@android:color/primary_text_dark" />
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableTop="@android:drawable/btn_star_big_on"
+            android:drawableTop="@drawable/minibed"
             android:onClick="navigation"
             android:text="@string/dashboard_nav_button_sleep"
             android:textColor="@android:color/primary_text_dark" />
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableTop="@android:drawable/btn_star_big_on"
+            android:drawableTop="@drawable/minicontact"
             android:onClick="navigation"
             android:text="@string/dashboard_nav_button_consultant"
             android:textColor="@android:color/primary_text_dark" />
